k8s/VMs2PODs/back-end.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb 
  namespace: ${NAMESPACE} 
  labels:
    app: mariadb 
spec:
  containers:
  - name: mariadb
    image: mariadb/server:10.1.37
    resources:
      limits:
        cpu: 12m
        memory: 120Mi
      requests:
        cpu: 10m
        memory: 100Mi
    volumeMounts:
    - mountPath: /var/lib/mysql 
      name: data 
    ports:
        - containerPort: 3306
  volumes:
  - name: data 
    # This VMDK volume must already exist.
    vsphereVolume:
      volumePath: "[${DATASTORE}] ${VMDK}"
      fsType: ext4
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service-lb
  namespace: ${NAMESPACE} 
spec:
  type: LoadBalancer 
  ports:
  - name: mariadb
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mariadb
