k8s/VMs2PODs/front-end-lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-fpm-deployment
  namespace: avalanche
  labels:
    app: php-fpm
spec:
  replicas: 4
  selector:
    matchLabels:
      app: php-fpm
  template:
    metadata:
      labels:
        app: php-fpm
    spec:
      containers:
      - name: php-fpm
        image: harbor.cpod-appstx.az-lab.shwrfr.com/library/php-fpm:latest
        resources:
          limits:
            cpu: 12m 
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 15Mi
        ports:
        - containerPort: 9000
---
kind: Service
apiVersion: v1
metadata:
  name: php-fpm-service
  namespace: avalanche
spec:
  type: ClusterIP
  ports:
  - name: php-fpm 
    port: 9000 
    protocol: TCP
    targetPort: 9000 
  selector:
    app: php-fpm 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: avalanche
  labels:
    app: nginx
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: harbor.cpod-appstx.az-lab.shwrfr.com/library/nginx:latest 
        resources:
          limits:
            cpu: 12m 
            memory: 15Mi
          requests:
            cpu: 10m 
            memory: 10Mi
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service-lb
  namespace: avalanche
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
  type: LoadBalancer
